Pagina preferencias finalizada.

--- a/personagens.html
+++ b/personagens.html
@@ -9,10 +9,7 @@
     <main>
       <h1>DCC202 - Atividade 5 - Personagens: Abner Franco</h1>
       <p>
-        Esta é a página sobre os personagens de Audiovisual de Entreterimento
-        Generico. Temos também a página sobre
-        <a href="preferencias.html">o quanto gosto</a> de cada um deles e a
-        <a href="index.html">página principal</a>.
+        Esta é a página sobre os personagens de Audiovisual de Entreterimento Generico. Temos também a página sobre <a href="preferencias.html">o quanto gosto</a> de cada um deles e a <a href="index.html">página principal</a>.
       </p>
       <dl>
         <div>
