--- a/preferencias.html
+++ b/preferencias.html
@@ -13,7 +13,14 @@
             Temos também a página sobre <a href="personagens.html">personagens</a> e a <a href="index.html">página principal</a>.
         </p>
         <table>
-            <tr><td>Personagem</td> <td>História</td> <td>Design</td> <td>Personalidade</td> <td>Total</td></tr>
+            <thead>
+                <tr><th>Personagem</th> <th>História</th> <th>Design</th> <th>Personalidade</th><th>Total</th></tr>
+            </thead>
+            <tbody>
+                <tr><td>Personagem_1</td> <td>1</td> <td>2</td> <td>3</td> <td>6</td></tr>
+                <tr><td>Personagem_2</td> <td>1</td> <td>2</td> <td>3</td> <td>6</td></tr>
+                <tr><td>Personagem_3</td> <td>1</td> <td>2</td> <td>3</td> <td>6</td></tr>
+            </tbody>
         </table>
     </main>
     
